--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,17 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  --color-transparent: #00000000;
+  --color-background: #21292c;
+  --color-primary: #ffffff;
+  --color-secondary: #888888;
+  --color-third: #2f363e;
+  --color-active-primary: #0f2680;
+  --color-active-secondary: #1b1c1d;
+  --color-blue-primary: #0052e4;
+  --color-blue-secondary: #0096ff;
+  --color-error: #c52477;
+  --color-redprimary: #ff0000;
 }
